--- a/Views/TeachingAssistant/ResultApply.cshtml
+++ b/Views/TeachingAssistant/ResultApply.cshtml
@@ -126,8 +126,17 @@
                                     <tr>
                                         <td valign="middle">@item.LopHocPhan.MaLHP</td>
                                         <td valign="middle">@item.LopHocPhan.TenHP</td>
-                                        <td valign="middle">@(item.LopHocPhan.ThoiKhoaBieu.First().Thu); Tiết @(item.LopHocPhan.ThoiKhoaBieu.First().TietHoc); Tuần @(item.LopHocPhan.ThoiKhoaBieu.First().TuanBD) - @(item.LopHocPhan.ThoiKhoaBieu.First().TuanKT); Phòng @(item.LopHocPhan.ThoiKhoaBieu.First().Phong)</td>
-                                        <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.First().SoTietDaXep</td>
+                                        <td valign="middle">
+                                            <ul>
+                                                @foreach (var items in item.LopHocPhan.ThoiKhoaBieu.ToList())
+                                                {
+                                                    <li>
+                                                        @(items.Thu); Tiết @(items.TietHoc); Tuần @(items.TuanBD) - @(items.TuanKT); Phòng @(items.Phong)
+                                                    </li>
+                                                }
+                                            </ul>
+                                        </td>
+                                        <td valign="middle">@item.LopHocPhan.ThoiKhoaBieu.Sum(s => s.SoTietDaXep)</td>
                                         <td valign="middle" class="text-nowrap">
                                             @if (item.DanhGiaPhongVan.Count < 1)
                                             {
