--- a/Views/TeachingAssistant/_FilterAdvances.cshtml
+++ b/Views/TeachingAssistant/_FilterAdvances.cshtml
@@ -40,8 +40,17 @@
                             <br />
                             Tên: @item.TenCBGD
                         </td>
-                        <td valign="middle">@(item.ThoiKhoaBieu.First().Thu); Tiết @(item.ThoiKhoaBieu.First().TietHoc); Tuần @(item.ThoiKhoaBieu.First().TuanBD) - @(item.ThoiKhoaBieu.First().TuanKT); Phòng @(item.ThoiKhoaBieu.First().Phong)</td>
-                        <td valign="middle">@item.ThoiKhoaBieu.First().SoTietDaXep</td>
+                        <td valign="middle">
+                            <ul>
+                                @foreach (var items in item.ThoiKhoaBieu.ToList())
+                                {
+                                    <li>
+                                        @(items.Thu); Tiết @(items.TietHoc); Tuần @(items.TuanBD) - @(items.TuanKT); Phòng @(items.Phong)
+                                    </li>
+                                }
+                            </ul>
+                        </td>
+                        <td valign="middle">@item.ThoiKhoaBieu.Sum(s => s.SoTietDaXep)</td>
                         <td valign="middle">0</td>
                         <td valign="middle" class="text-nowrap">
                             @if (item.DeXuatTroGiang.First().TrangThai == false)
