--- a/Views/Shared/_TeacherLayout.cshtml
+++ b/Views/Shared/_TeacherLayout.cshtml
@@ -157,7 +157,7 @@
                                 </li>
                                 <li class="nav-item ">
                                     <a id="child-trogiang-phancongtrogiang" class="child-nav-link nav-link "
-                                       href="@Url.Action("Assgined", "TeachingAssistant")">
+                                       href="@Url.Action("Assgined", "Assignment")">
                                         Phân công trợ giảng
                                     </a>
                                 </li>
